package firmament;

import "resource_desc.proto";

message EnsembleDescriptor {
  required uint64 uid = 1;
  required string name = 2;

  repeated ResourceDescriptor joined_resources = 3;
  // Nested and peered ensembles.
  repeated EnsembleDescriptor nested_ensembles = 4;
  repeated EnsembleDescriptor peered_ensembles = 5;
}
